Fix scrollbar width and highlight on hover (#60)

--- a/index.css
+++ b/index.css
@@ -43,15 +43,16 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 12px;
 }
 ::-webkit-scrollbar-track {
   background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background: var(--color-border);
-  border-radius: 3px;
+  background: var(--color-border-light);
+  border-radius: 10px;
+  border: 3px solid var(--color-bg);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--color-border-light);
+  background: var(--color-text-secondary);
 }
